fix: SavedEvents -> alignment

--- a/Event_Tracker_App/Event.Tracker.Web/src/pages/Account.css
+++ b/Event_Tracker_App/Event.Tracker.Web/src/pages/Account.css
@@ -9,6 +9,7 @@
     height: 100%;
     z-index: 15;
     padding-top: 10vh;
+    padding-bottom: 15vh;
 
     overflow: auto;
     overflow-x: hidden;
